# Cellulose1.0

./: .gitignore  CMakeLists.txt  Cellulose.aex  README.md  build_pipl.bat
cmake/: FindAESDK.cmake  PreprocessR.cmake  RunPiPLtool.cmake
src/: Cellulose.cpp  Cellulose.h  Cellulose.r  CelluloseAlgorithm.h  CelluloseCPU.cpp  CelluloseCPU.h  CelluloseGPU.cpp  CelluloseGPU.h  CelluloseParams.h  CellulosePiPL.rc  CellulosePiPL.rr
src/cuda/: CelluloseCUDA.cu  CelluloseCUDA.cuh
src/metal/: CelluloseMetal.h  CelluloseMetal.metal  CelluloseMetal.mm
